# ignorer

./: .gitignore  .gitmodules  pyproject.toml  tasks.py
.github/workflows/: formulate.yml
src/: gitignore.py  prompts.py
src/ignorer/: ignorer.py
