[tool.poetry]
name = "tuneout"
version = "1.0.0"
description = ""
authors = ["celsius narhwal <hello@celsiusnarhwal.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
inquirerpy = "^0.3.4"
pyperclip = "^1.8.2"
gitignore-parser = "^0.1.0"
inflect = "^6.0.2"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
